--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,95 @@
 
+body {
+	padding-top: 2.5cm;
+	text-align: center;
+	background-color: aquamarine;
+	font-family: 'Nunito', sans-serif;
+	color: #1a1a1a;
+}
+
 h1 {
-color: blue;
+	color: blue;
+}
+
+#my_pic {
+	width: 18%;
+	border-radius: 50%;
+}
+
+#name {
+	color: black;
+	font-size: 35pt;
+}
+
+#bio_main {
+	color: orangered;
+	font-size: 25pt;
+	font-family: 'Amatic SC', cursive;
+}
+
+
+
+.sidebar {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0;
+  left: 0;
+  background-color: #1a1a1a; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+}
+/* The sidebar links */
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #f1f1f1;
+  display: block;
+  transition: 0.3s;
+}
+/* When you mouse over the navigation links, change their color */
+.sidebar a:hover {
+  color: #818181;
+}
+/* Position and style the close button (top right corner) */
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* The button used to open the sidebar */
+.openbtn {
+	width: 50px;
+	height: 100vh;
+  font-size: 20px;
+  font-family: 'Nunito', sans-serif;
+  cursor: pointer;
+  background-color: #1a1a1a;
+  color: #f1f1f1;
+  padding: 10px 15px;
+  border: none;
+}
+.openbtn:hover {
+	color: #818181;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+	position: absolute;
+	top: 0;
+	left: 0;
+  /* transition: margin-left .5s; /* If you want a transition effect */
+  /* padding: 20px; */
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
 }
